--- a/view/base-nav.html
+++ b/view/base-nav.html
@@ -104,19 +104,39 @@
             <!-- Sidebar Menu Items - These collapse to the responsive navigation menu on small screens -->
              <div class="collapse navbar-collapse navbar-ex1-collapse">
                 <ul class="nav navbar-nav side-nav">
-                    <li>
+					{{if eq .Nav 1}}
+                    <li class="active">
+					{{else}}
+					<li>
+					{{end}}
                         <a href="/"><i class="fa fa-fw fa-dashboard"></i> Dashboard</a>
                     </li>
-                     <li class="active">
+					{{if eq .Nav 2}}
+                    <li class="active">
+					{{else}}
+					<li>
+					{{end}}
                         <a href="/project"><i class="fa fa-fw fa-folder"></i> Projects</a>
                     </li>
-                    <li>
+					{{if eq .Nav 3}}
+                    <li class="active">
+					{{else}}
+					<li>
+					{{end}}
                         <a href="charts.html"><i class="fa fa-fw fa-bar-chart-o"></i> Gantt Chart</a>
                     </li>
-                    <li>
+					{{if eq .Nav 4}}
+                    <li class="active">
+					{{else}}
+					<li>
+					{{end}}
                         <a href="bootstrap-grid.html"><i class="fa fa-fw fa-cogs"></i> Setting</a>
                     </li>
-                    <li>
+					{{if eq .Nav 5}}
+                    <li class="active">
+					{{else}}
+					<li>
+					{{end}}
                         <a href="blank-page.html"><i class="fa fa-fw fa-file"></i> Wiki</a>
                     </li>
                 </ul>
