--- a/view/blank-page.html
+++ b/view/blank-page.html
@@ -4,7 +4,7 @@
 <body>
 
     <div id="wrapper">
-        {{template "Navigation"}}
+        {{template "Navigation" .}}
         <div id="page-wrapper">
 
             <div class="container-fluid">
