--- a/view/project.html
+++ b/view/project.html
@@ -6,7 +6,7 @@
     <div id="wrapper">
 
         <!-- Navigation -->
-        {{template "Navigation"}}
+        {{template "Navigation" .}}
         <!-- Navigation -->
 
         <div id="page-wrapper">
@@ -44,7 +44,7 @@
                 </div>
             </div>
             <!-- /.container-fluid -->
-             {{ range $key, $value := . }}
+             {{ range $key, $value := .Projects }}
             <div class="col-lg-3 col-md-6 project">
                 <div class="panel panel-green">
                     <div class="panel-heading">
