Revert "nav-menu template"
This reverts commit b307a5e32609a48c164fd9e1d8c054c49df54eab.

--- a/view/index.html
+++ b/view/index.html
@@ -7,7 +7,7 @@
 
     <div id="wrapper">
         <!-- Navigation -->
-        {{template "Navigation" .}}
+        {{template "Navigation"}}
         <!-- Navigation -->
         <div id="page-wrapper">
 
