add project info page

--- a/static/css/sb-admin.css
+++ b/static/css/sb-admin.css
@@ -229,3 +229,12 @@ ul.alert-dropdown {
 .panel-yellow > a:hover {
     color: #df8a13;
 }
+
+/* Project List */
+.project-list-meta{
+  display: block;
+  margin-top: 8px;
+  margin-bottom: 0;
+  font-size: 13px;
+  color: #888;
+}
