--- a/view/project-list.html
+++ b/view/project-list.html
@@ -43,31 +43,16 @@
                     </div>
                 </div>
             </div>
+			<ul class="col-lg-12 list-group" style="padding-left:inherit;">
             <!-- /.container-fluid -->
              {{ range $key, $value := .Projects }}
-            <div class="col-lg-3 col-md-6 project">
-                <div class="panel panel-green">
-                    <div class="panel-heading">
-                        <div class="row">
-                            <div class="col-xs-3">
-                                <i class="fa fa-tasks fa-5x"></i>
-                            </div>
-                            <div class="col-xs-9 text-right">
-                                <div class="name">{{.Name}}</div>
-                                <div>{{.Desc}}</div>
-                            </div>
-                        </div>
-                    </div>
-                    <a href="/project/{{.Path}}">
-                        <div class="panel-footer">
-                            <span class="pull-left">View Details</span>
-                            <span class="pull-right"><i class="fa fa-arrow-circle-right"></i></span>
-                            <div class="clearfix"></div>
-                        </div>
-                    </a>
-                </div>
-            </div>
+			<li class="list-group-item">
+			<h3><a href="/project/{{.Path}}">{{.Path}}</a></h3>
+			<p>{{.Desc}}</p>
+			<p class="project-list-meta">Updated on 27 Jan</p>
+			</li>
             {{ end }}
+			</ul>
         </div>
     </div>
     <div class="modal fade" id="createProjectModal">
